[package]
name = "uringer"
authors = [
	"Ahmed Mones <oneofone@gmail.com>",
	"Ivan Prisyazhnyy <john.koepi@gmail.com>",
]
description = "Rust liburing raw bindings with basic tests"
documentation = "http://kernel.dk/io_uring.pdf"
edition = "2021"
license = "MIT/Apache-2.0"
publish = false
repository = "https://github.com/OneOfone/uringer"
version = "0.0.3"

[build-dependencies]
bindgen = "*"

[dependencies]
libc = "*"
